--- a/jemdoc.css
+++ b/jemdoc.css
@@ -7,15 +7,15 @@ table#tlayout {
 }
 
 body {
-	background: white;
+	background: F8F8F8;
 	font-family: Georgia, serif;
 	padding-bottom: 8px;
 	margin: 0;
 }
 
 #layout-menu {
-	background: #f6f6f6;
-	border: 1px solid #dddddd;
+    background:  #F8F8F8;
+	border: 1px solid #FFFFFF;
 	padding-top: 0.5em;
 	padding-left: 8px;
 	padding-right: 8px;
